Added a detailed VC to show long request text which has a search bar.

--- a/NetGuard/en.lproj/Localizable.strings
+++ b/NetGuard/en.lproj/Localizable.strings
@@ -11,9 +11,11 @@
 "Request HTTP Method " = "Request HTTP Method ";
 "Request URL " = "Request URL ";
 "Summary" = "Summary";
+"Empty" = "Empty";
 "Request Header Details" = "Request Header Details";
 "Request Body Details" = "Request Body Details";
 "Response Header Details" = "Response Header Details";
 "Response Body Details" = "Response Body Details";
 "Search request by url" = "Search request by url";
+"Search request by keyword" = "Search request by keyword";
 "NetGuard" = "NetGuard";
